--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     restart: always
     command: --default-authentication-plugin=mysql_native_password
     volumes:
+      - ./sql:/docker-entrypoint-initdb.d
       - ./data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: Re$tR00tP@$$
